--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "data-collection",
   "version": "1.0.0",
   "description": "Simple form application",
+  "type": "module",
   "main": "app.js",
   "scripts": {
     "watch": "tsc --watch",
@@ -14,9 +15,15 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@types/ejs": "^3.1.2",
+    "@types/express": "^4.17.17",
     "@types/node": "^18.14.2",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.4",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "ejs": "^3.1.8",
+    "express": "^4.18.2"
   }
 }
